# mil-masters-thesis-chalmers

./: Proposal.tex  README.md
code/funlang/: funlang.cabal
code/funlang/src/: AST.hs  Main.hs
code/funlang/src/FunLang/: AST.hs  BuiltIn.hs  CodeGenMil.hs  DebugShow.hs  Lexer.x  Optimiser.hs  Parser.y  PrettyPrinter.hs  SrcAnnotated.hs  SrcSpan.hs  TypeAnnotated.hs  TypeChecker.hs  Utils.hs
code/funlang/src/FunLang/AST/: DebugShow.hs  Helpers.hs  PrettyPrinter.hs  SrcAnnotated.hs  TypeAnnotated.hs
code/funlang/src/FunLang/Parser/: ParseError.hs
code/funlang/src/FunLang/TypeChecker/: Helpers.hs  TcError.hs  TypeCheckM.hs  TypeEnv.hs
code/funlang/test/FunLang/: CodeGenMilSpec.hs  LexerSpec.hs  OptimiserSpec.hs  ParserSpec.hs  PrettyPrinterSpec.hs  TestUtils.hs  TypeCheckerSpec.hs
code/funlang/test/codegenmiltests/: Arithmetic.fl  Arithmetic.mil  BuiltInFunctions.fl  BuiltInFunctions.mil  DataTypes.fl  DataTypes.mil  DoBlocks.fl  DoBlocks.mil  Exceptions.fl  Exceptions.mil  LambdasApps.fl  LambdasApps.mil  Polymorphism.fl  Polymorphism.mil  Program.fl  Program.mil  SimpleFunctions.fl  SimpleFunctions.mil
code/funlang/test/optimisertests/: ConstantFolding_opt.mil  DataConFunctionApps.fl  DataConFunctionApps_opt.mil  Monads.fl  Monads_opt.mil  Simple.fl  Simple_opt.mil
code/funlang/test/parsertests/failure/: Empty.err  TypeLowerId.err  TypeLowerId.fl  TypeMissingEqualSign.err  TypeMissingEqualSign.fl  TypeZeroConstructors.err  TypeZeroConstructors.fl
code/funlang/test/parsertests/success/: BinOpExpressions.fl  CaseConExpressions.fl  DataTypes.fl  DataTypesAndFunctions.fl  ExceptionExpressions.fl  Expressions.fl  Functions.fl  LamAppLitExpressions.fl  SingleDataTypeWithSeveralSimpleConstructors.fl  SingleDataTypeWithTypeVars.fl  SingleSimpleDataType.fl  Statements.fl  Types.fl
code/funlang/test/typecheckertests/failure/: AppIncorrectArgType.err  AppIncorrectArgType.fl  AppNotFunction.err  AppNotFunction.fl  ArithOpDiffTypes.err  ArithOpDiffTypes.fl  ArithOpLeftNonArithType.err  ArithOpLeftNonArithType.fl  ArithOpRightNonArithType.err  ArithOpRightNonArithType.fl  BindExprIncorrectMonadResultType.err  BindExprIncorrectMonadResultType.fl  BindExprIncorrectMonadType.err  BindExprIncorrectMonadType.fl  BindExprNonMonadType.err  BindExprNonMonadType.fl  BindShadowsGlobalFun.err  BindShadowsGlobalFun.fl  BindShadowsLocalVar.err  BindShadowsLocalVar.fl  CaseAltIncorrectType.err  CaseAltIncorrectType.fl  CatchDifferentTypes.err  CatchDifferentTypes.fl  CmpOpDiffTypes.err  CmpOpDiffTypes.fl  CmpOpLeftNonCmpType.err  CmpOpLeftNonCmpType.fl  CmpOpRightNonCmpType.err  CmpOpRightNonCmpType.fl  ConPatternFunctionScrutinee.err  ConPatternFunctionScrutinee.fl  ConPatternIncorrectNumberOfFields.err  ConPatternIncorrectNumberOfFields.fl  ConPatternIncorrectType.err  ConPatternIncorrectType.fl  ConPatternUndefined.err  ConPatternUndefined.fl  DataConAlreadyDefined.err  DataConAlreadyDefined.fl  (+82 more)
code/funlang/test/typecheckertests/success/: Program.fl  SimpleDataTypeAndFunction.fl
code/funlang/utils/: failtests.sh  optdiff.sh
code/mil/: LICENSE  mil.cabal
code/mil/src/: AST.hs
code/mil/src/MIL/: AST.hs  BuiltIn.hs  Lexer.x  LintChecker.hs  Parser.y  PrettyPrinter.hs  TypeChecker.hs  Utils.hs
code/mil/src/MIL/AST/: Builder.hs  Helpers.hs  PrettyPrinter.hs  TypeAnnotated.hs
code/mil/src/MIL/Transformations/: CaseExpression.hs  ConstantFolding.hs  Error.hs  Helpers.hs  Id.hs  IdExprMonadElimination.hs  Lift.hs  MonadLaws.hs  State.hs
code/mil/src/MIL/TypeChecker/: AlphaEq.hs  Common.hs  Helpers.hs  (+5 more)
code/mil/test/MIL/: LexerSpec.hs  LintCheckerSpec.hs  TestUtils.hs  TypeCheckerSpec.hs
code/mil/test/prettyprintertests/: DataTypes.mil  DataTypesAndAliases.mil  DataTypesAndFunctions.mil  Expressions.mil  Functions.mil  Types.mil
code/mil/test/transformationstests/: AddFloatConstFolding.mil  AddFloatConstFolding_out.mil  AddIntConstFolding.mil  AddIntConstFolding_out.mil  Associativity.mil  AssociativityFullSyntax.mil  AssociativityFullSyntax_out.mil  Associativity_out.mil  CollapseNewWrite.mil  CollapseNewWrite_out.mil  ComposeLift.mil  ComposeLift_out.mil  EliminateConstantCase.mil  EliminateConstantCase_out.mil  EliminateThrowCatch.mil  EliminateThrowCatchNoException.mil  EliminateThrowCatchNoException_out.mil  EliminateThrowCatch_out.mil  ExchangeNew.mil  ExchangeNew_out.mil  ExchangeRead.mil  ExchangeRead_out.mil  ExtractCommonBind.mil  ExtractCommonBindSameBinder.mil  ExtractCommonBindSameBinder_out.mil  ExtractCommonBind_out.mil  IdDeadCodeElimination.mil  IdDeadCodeElimination_out.mil  IdExchange.mil  IdExchange_out.mil  LeftIdentityFullSyntax.mil  LeftIdentityFullSyntax_out.mil  LeftIdentity_out.mil  LiftIdentity.mil  LiftIdentity_out.mil  MulFloatConstFolding.mil  MulFloatConstFolding_out.mil  MulIntConstFolding.mil  MulIntConstFolding_out.mil  RightIdentity.mil  (+11 more)
code/oolang/: oolang.cabal
code/oolang/src/: Main.hs
code/oolang/src/OOLang/: AST.hs  BuiltIn.hs  CodeGenMil.hs  Lexer.x  Optimiser.hs  Parser.y  PrettyPrinter.hs  PureAnnotated.hs  SrcAnnotated.hs  SrcSpan.hs  TypeAnnotated.hs  TypeChecker.hs  Utils.hs
code/oolang/test/OOLang/: CodeGenMilSpec.hs  LexerSpec.hs  OptimiserSpec.hs  ParserSpec.hs  TestUtils.hs  TypeCheckerSpec.hs
code/oolang/test/codegenmiltests/: Arithmetic.mil  Arithmetic.ool  Assignments.mil  Assignments.ool  BuiltInFunctions.mil  BuiltInFunctions.ool  Classes.mil  Classes.ool  DeclarationStatements.mil  DeclarationStatements.ool  Exceptions.mil  Exceptions.ool  Functions.mil  Functions.ool  FunctionsWithParams.mil  FunctionsWithParams.ool  FunctionsWithParamsApps.mil  FunctionsWithParamsApps.ool  NothingCoalesce.mil  NothingCoalesce.ool  SimpleFunctions.mil  SimpleFunctions.ool  Variables.mil  Variables.ool  WhenStatement.mil  WhenStatement.ool
code/oolang/test/optimisertests/: Classes.ool  Classes_opt.mil  ConstantFolding.ool  ConstantFolding_opt.mil  ImmutableVarsFunctionCalls.ool  ImmutableVarsFunctionCalls_opt.mil  Simple.ool  Simple_opt.mil  WhenElimination.ool  WhenElimination_opt.mil
code/oolang/utils/: optdiff.sh
(+470 files in other folders)
