name:                funlang
version:             0.1.0.0
synopsis:            FunLang compiler.
description:         Part of the Master's thesis at Chalmers University of Technology. Supervisor: Josef Svenningsson.
license:             MIT
author:              Dmytro Lypai
maintainer:          dmytrolypai@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  src/FunLang/Lexer.x
                     src/FunLang/Parser.y
cabal-version:       >= 1.10

executable flc
  main-is:             Main.hs
  other-modules:       FunLang.AST
                       FunLang.AST.PrettyPrinter
                       FunLang.AST.SrcAnnotated
                       FunLang.Lexer
                       FunLang.Parser
                       FunLang.Parser.ParseError
                       FunLang.PrettyPrinter
                       FunLang.SrcAnnotated
                       FunLang.SrcSpan
                       FunLang.TypeChecker
                       FunLang.TypeChecker.TcError
                       FunLang.TypeChecker.TypeCheckM
                       FunLang.Utils
  -- other-extensions:    
  build-depends:       base >= 4.6 && < 4.7
                     , array
                     , pretty
                     , pretty-show
                     , mtl
                     , filepath
                     , containers
                     , mil
  hs-source-dirs:      src
  build-tools:         alex
                     , happy
  buildable:           True
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src, test
  build-depends:     base >= 4.6 && < 4.7
                   , array
                   , pretty
                   , pretty-show
                   , mtl
                   , hspec
                   , filepath
                   , containers
  build-tools:       alex
                   , happy
  other-modules:     FunLang.Lexer
                     FunLang.Parser
  default-language:  Haskell2010
  ghc-options:       -Wall

