name:                mil
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Dmytro Lypai
maintainer:          dmytrolypai@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  src/MIL/Lexer.x
cabal-version:       >= 1.10

library
  exposed-modules:     MIL.Lexer
  -- other-extensions:    
  build-depends:       base >= 4.6 && < 4.7
                     , array
                     , pretty
  hs-source-dirs:      src
  build-tools:         alex >= 2.3
  buildable:           True
  default-language:    Haskell2010

test-suite spec
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src, test
  build-depends:     base >= 4.6 && < 4.7
                   , array
                   , pretty
                   , hspec
  build-tools:       alex >= 2.3
  other-modules:     MIL.Lexer
  default-language:  Haskell2010

