name:                mil
version:             0.1.0.0
synopsis:            Monadic intermediate language.
description:         Part of the Master's thesis at Chalmers University of Technology. Supervisor: Josef Svenningsson.
license:             MIT
license-file:        LICENSE
author:              Dmytro Lypai
maintainer:          dmytrolypai@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  src/MIL/Lexer.x
                     src/MIL/Parser.y
cabal-version:       >= 1.10

library
  exposed-modules:     MIL.AST
                       MIL.AST.PrettyPrinter
                       MIL.Lexer
                       MIL.Parser
                       MIL.PrettyPrinter
  -- other-extensions:    
  build-depends:       base >= 4.6 && < 4.7
                     , array
                     , pretty
  hs-source-dirs:      src
  build-tools:         alex
                     , happy
  buildable:           True
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src, test
  build-depends:     base >= 4.6 && < 4.7
                   , array
                   , pretty
                   , hspec
                   , filepath
  build-tools:       alex
                   , happy
  other-modules:     MIL.Lexer
                   , MIL.Parser
  default-language:  Haskell2010
  ghc-options:       -Wall

