name:                mil
version:             0.1.0.0
synopsis:            Monadic intermediate language.
description:         Part of the Master's thesis at Chalmers University of Technology. Supervisor: Josef Svenningsson.
license:             MIT
author:              Dmytro Lypai
maintainer:          dmytrolypai@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  src/MIL/Lexer.x
                     src/MIL/Parser.y
cabal-version:       >= 1.10

library
  exposed-modules:     MIL.AST
                       MIL.AST.Builder
                       MIL.AST.Helpers
                       MIL.AST.PrettyPrinter
                       MIL.AST.TypeAnnotated
                       MIL.BuiltIn
                       MIL.Lexer
                       MIL.LintChecker
                       MIL.Parser
                       MIL.PrettyPrinter
                       MIL.TypeChecker
                       MIL.Transformations.MonadLaws
                       MIL.Transformations.Id
                       MIL.Transformations.Lift
                       MIL.Transformations.Error
                       MIL.Transformations.State
                       MIL.Transformations.CaseExpression
                       MIL.Transformations.ConstantFolding
                       MIL.Transformations.Helpers
  other-modules:       MIL.TypeChecker.Helpers
                       MIL.TypeChecker.SrcTypeHelpers
                       MIL.TypeChecker.AlphaEq
                       MIL.TypeChecker.TypeSubstitution
                       MIL.TypeChecker.Common
                       MIL.TypeChecker.TcError
                       MIL.TypeChecker.TypeEnv
                       MIL.TypeChecker.TypeCheckM
                       MIL.Utils
  -- other-extensions:    
  build-depends:       base >= 4.6
                     , array
                     , pretty
                     , mtl
                     , containers
                     , uniplate
  hs-source-dirs:      src
  build-tools:         alex
                     , happy
  buildable:           True
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src, test
  build-depends:     base >= 4.6
                   , array
                   , pretty
                   , hspec
                   , filepath
                   , mtl
                   , containers
                   , uniplate
  build-tools:       alex
                   , happy
  other-modules:     MIL.Lexer
                   , MIL.Parser
  default-language:  Haskell2010
  ghc-options:       -Wall -fhpc

