name:                oolang
version:             0.1.0.0
synopsis:            OOLang compiler. Part of the Master's thesis at Chalmers University of Technology. Supervisor: Josef Svenningsson.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Dmytro Lypai
maintainer:          dmytrolypai@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  src/OOLang/Lexer.x
                     src/OOLang/Parser.y
cabal-version:       >= 1.10

executable oolc
  main-is:             Main.hs
  other-modules:       OOLang.Lexer
                       OOLang.Parser
  -- other-extensions:    
  build-depends:       base >= 4.6 && < 4.7
                     , array
                     , pretty
                     , pretty-show
                     , mtl
                     , filepath
                     , containers
  hs-source-dirs:      src
  build-tools:         alex
                     , happy
  buildable:           True
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src, test
  build-depends:     base >= 4.6 && < 4.7
                   , array
                   , pretty
                   , pretty-show
                   , mtl
                   , hspec
                   , filepath
                   , containers
  build-tools:       alex
                   , happy
  other-modules:     OOLang.Lexer
                     OOLang.Parser
  default-language:  Haskell2010
  ghc-options:       -Wall

