name:                oolang
version:             0.1.0.0
synopsis:            OOLang compiler.
description:         Part of the Master's thesis at Chalmers University of Technology. Supervisor: Josef Svenningsson.
license:             MIT
author:              Dmytro Lypai
maintainer:          dmytrolypai@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  src/OOLang/Lexer.x
                     src/OOLang/Parser.y
cabal-version:       >= 1.10

executable oolc
  main-is:             Main.hs
  other-modules:       OOLang.AST
                       OOLang.AST.Helpers
                       OOLang.AST.PrettyPrinter
                       OOLang.AST.PureAnnotated
                       OOLang.AST.SrcAnnotated
                       OOLang.AST.TypeAnnotated
                       OOLang.BuiltIn
                       OOLang.CodeGenMil
                       OOLang.Lexer
                       OOLang.Optimiser
                       OOLang.Parser
                       OOLang.Parser.ParseError
                       OOLang.PrettyPrinter
                       OOLang.PureAnnotated
                       OOLang.SrcAnnotated
                       OOLang.SrcSpan
                       OOLang.TypeAnnotated
                       OOLang.TypeChecker
                       OOLang.TypeChecker.Helpers
                       OOLang.TypeChecker.TcError
                       OOLang.TypeChecker.TypeEnv
                       OOLang.TypeChecker.TypeCheckM
                       OOLang.Utils
  -- other-extensions:    
  build-depends:       base >= 4.6
                     , array
                     , pretty
                     , pretty-show
                     , mtl
                     , filepath
                     , containers
                     , mil
  hs-source-dirs:      src
  build-tools:         alex
                     , happy
  buildable:           True
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src, test
  build-depends:     base >= 4.6
                   , array
                   , pretty
                   , pretty-show
                   , mtl
                   , hspec
                   , filepath
                   , containers
                   , mil
  build-tools:       alex
                   , happy
  other-modules:     OOLang.Lexer
                     OOLang.Parser
  default-language:  Haskell2010
  ghc-options:       -Wall

